Fix immagine profilo

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <p>Il suo lavoro è stato esposto alla Biennale di Venezia (2020) e pubblicato su "Black & White Magazine" (2022). Specializzato in ritratti ambientati e paesaggi urbani, cattura l'anima dei soggetti attraverso composizioni geometriche e un'attenzione maniacale ai dettagli.</p>
             </div>
             <div class="about-image">
-                <img src="https://images.unsplash.com/photo-1554080353-a576cf803bda?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Aniello Napoleone al lavoro">
+                <img src="img/img_profilo.webp" alt="Aniello Napoleone al lavoro">
             </div>
         </div>
     </section>
