--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             font-size: 2.5rem; 
             margin-bottom: 50px; 
             color: #1A1A1A;
+            text-align:center;
             position: relative;
         }
         .section-title::after {
@@ -257,12 +258,12 @@
 
     <!-- ABOUT SECTION -->
     <section class="about" id="about">
-        <h2 class="section-title">Biografia</h2>
+        <h2 class="section-title">Hi, I'm Aniello Napoleone!</h2>
         <div class="about-content">
             <div class="about-text">
-                <h3>La poetica del monocromo</h3>
-                <p>Aniello Napoleone trasforma l'ordinario in straordinario attraverso un meticoloso studio delle luci e delle ombre. Nato a Napoli nel 1985, sviluppa fin da giovane una passione per la fotografia analogica.</p>
-                <p>Il suo lavoro è stato esposto alla Biennale di Venezia (2020) e pubblicato su "Black & White Magazine" (2022). Specializzato in ritratti ambientati e paesaggi urbani, cattura l'anima dei soggetti attraverso composizioni geometriche e un'attenzione maniacale ai dettagli.</p>
+                <p>
+                    I'm a 28 years old guy based in Ischia, Napoli. I'm a photographer wth a passion for street photography and reportage photography. I have mainly been concerned with bearing witness to the social movements that animate the city of Naples, where people fight for human rights, peace and equality. My goal is to broaden horizons, to continue to tell the battles of the marginalized, their lives, their demands, to demonstrate that in any part of the world, they are always the same. In every place on the planet the marginalized fight the same battle.
+                </p>
             </div>
             <div class="about-image">
                 <img src="img/img_profilo.webp" alt="Aniello Napoleone al lavoro">
@@ -323,6 +324,6 @@
     <!-- SCRIPTS -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js" crossorigin="anonymous"></script>
 </body>
 </html>
