--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@
         }
         .about-content { 
             display: flex; 
-            align-items: center; 
+            align-items: start; 
             gap: 50px; 
-            margin-top: 50px;
         }
         .about-text { 
             flex: 1; 
@@ -144,8 +143,8 @@
             flex: 1; 
         }
         .about-image img { 
-            width: 100%; 
-            height: auto; 
+            /*width: 100%; */
+            max-height: 300px; 
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         }
         
