--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         /* HERO SECTION */
         .hero { 
             height: 100vh; 
-            background: url('https://images.unsplash.com/photo-1505976378723-9726b54e9bb9?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80') center/cover; 
+            background: url('img/sfondo.webp') center/cover; 
             display: flex; 
             align-items: center; 
             justify-content: center; 
