--- a/index.html
+++ b/index.html
@@ -229,6 +229,11 @@
             font-size: 0.9rem; 
             color: #aaa; 
         }
+        @media only screen and (max-width: 700px) {
+          .about-content {
+                flex-direction: column-reverse;
+          }
+        }
     </style>
     <script src="js/smoothscroll.js"></script>
 </head>
