--- a/index.html
+++ b/index.html
@@ -233,6 +233,9 @@
           .about-content {
                 flex-direction: column-reverse;
           }
+          .about-image{
+              width: 100%;
+          }
         }
     </style>
     <script src="js/smoothscroll.js"></script>
