--- a/index.html
+++ b/index.html
@@ -237,6 +237,16 @@
               width: 100%;
           }
         }
+         @media only screen and (max-width: 550px) {
+            nav {
+                 flex-direction: column;
+            }
+            nav .menu a {
+                 flex-direction: column;
+                 margin-left: 15px;
+                 font-size:12px;
+            }
+        }
     </style>
     <script src="js/smoothscroll.js"></script>
 </head>
@@ -324,7 +334,7 @@
             <a href="#"><i class="fab fa-500px"></i></a>
         </div>
         <div class="copyright">
-            &copy; 2024 Aniello Napoleone. Tutti i contenuti sono protetti.
+            &copy; 2025 Aniello Napoleone. Tutti i contenuti sono protetti.
         </div>
     </footer>
 
