--- a/index.html
+++ b/index.html
@@ -293,23 +293,47 @@
     <section class="portfolio" id="portfolio">
         <h2 class="section-title">Portfolio</h2>
         <div class="gallery">
-            <a href="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="gallery" data-caption="Ritratto - Serie 'Volti' (2023)">
+            <!-- Gruppo 1 - Ritratti -->
+            <a href="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="ritratti" data-caption="Ritratto - Serie 'Volti' (2023)">
                 <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Ritratto maschile">
             </a>
-            <a href="https://images.unsplash.com/photo-1515886657613-9f3515b0c78f?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="gallery" data-caption="Moda - Editoriale Vogue Italia (2022)">
+            <a href="https://images.unsplash.com/photo-1496345875659-11f7dd282d1d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="ritratti" data-caption="Ritratto - Serie 'Identità' (2024)" style="display:none;">
+                <!-- Questa è nascosta ma farà parte del gruppo -->
+            </a>
+            <a href="https://images.unsplash.com/photo-1531123897727-8f129e1688ce?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="ritratti" data-caption="Ritratto - Serie 'Anime' (2022)" style="display:none;">
+                <!-- Altra immagine nascosta del gruppo -->
+            </a>
+
+            <!-- Gruppo 2 - Moda -->
+            <a href="https://images.unsplash.com/photo-1515886657613-9f3515b0c78f?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="moda" data-caption="Moda - Editoriale Vogue Italia (2022)">
                 <img src="https://images.unsplash.com/photo-1515886657613-9f3515b0c78f?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Editoriale moda">
             </a>
-            <a href="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="gallery" data-caption="Street Photography - Tokyo (2021)">
+            <a href="https://images.unsplash.com/photo-1525507119028-ed4c629a60a3?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="moda" data-caption="Moda - Campagna Prada (2021)" style="display:none;">
+                <!-- Immagine nascosta del gruppo moda -->
+            </a>
+
+            <!-- Gruppo 3 - Street Photography -->
+            <a href="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="street" data-caption="Street Photography - Tokyo (2021)">
                 <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Scatto street">
             </a>
-            <a href="https://images.unsplash.com/photo-1488161628813-04466f872be2?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="gallery" data-caption="Architettura - Milano (2020)">
+            <a href="https://images.unsplash.com/photo-1509316785289-025f5b846b35?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="street" data-caption="Street Photography - New York (2020)" style="display:none;">
+                <!-- Immagine nascosta del gruppo street -->
+            </a>
+
+            <!-- Gruppo 4 - Architettura -->
+            <a href="https://images.unsplash.com/photo-1488161628813-04466f872be2?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="architettura" data-caption="Architettura - Milano (2020)">
                 <img src="https://images.unsplash.com/photo-1488161628813-04466f872be2?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Architettura moderna">
             </a>
-            <a href="https://images.unsplash.com/photo-1492106087820-71f1a00d2b11?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="gallery" data-caption="Paesaggio - Dolomiti (2019)">
+            <a href="https://images.unsplash.com/photo-1493809842364-78817add7ffb?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="architettura" data-caption="Architettura - Dubai (2019)" style="display:none;">
+                <!-- Immagine nascosta del gruppo architettura -->
+            </a>
+
+            <!-- Gruppo 5 - Paesaggi -->
+            <a href="https://images.unsplash.com/photo-1492106087820-71f1a00d2b11?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="paesaggi" data-caption="Paesaggio - Dolomiti (2019)">
                 <img src="https://images.unsplash.com/photo-1492106087820-71f1a00d2b11?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Paesaggio montano">
             </a>
-            <a href="https://images.unsplash.com/photo-1496345875659-11f7dd282d1d?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="gallery" data-caption="Ritratto - Serie 'Identità' (2024)">
-                <img src="https://images.unsplash.com/photo-1496345875659-11f7dd282d1d?ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=80" alt="Ritratto femminile">
+            <a href="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" data-fancybox="paesaggi" data-caption="Paesaggio - Toscana (2018)" style="display:none;">
+                <!-- Immagine nascosta del gruppo paesaggi -->
             </a>
         </div>
     </section>
